[package]
name = "brute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.4", features = ["std_rng", "nightly"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3